Fixed layout issues

--- a/src/app/messages/messages.component.css
+++ b/src/app/messages/messages.component.css
@@ -7,6 +7,9 @@ h2 {
 body {
   margin: 2em;
 }
+.messages {
+  clear: both;
+}
 body, input[text], button {
   color: crimson;
   font-family: Cambria, Georgia;
